force-app/main/default/objects/Technician__c/Technician__c.object-meta.xml
<CustomObject>
    <description>현장 기술자. 스킬·지역·가용성 기반 배정 대상</description>
    <label>Technician</label>
    <nameField>
        <label>Technician Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technicians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>