force-app/main/default/objects/Technician__c/fields/Active_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>Active_Work_Orders__c</fullName>
    <description>현재 진행 중 작업 수(워크로드 점수용)</description>
    <label>Active Work Orders</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>