force-app/main/default/objects/Technician__c/fields/Base_Location__c.field-meta.xml
<CustomField>
    <fullName>Base_Location__c</fullName>
    <description>기술자 거점 위경도(거리 계산 기준)</description>
    <label>Base Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>