force-app/main/default/objects/Technician__c/fields/Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Available__c</fullName>
    <defaultValue>true</defaultValue>
    <description>현재 배정 가능 여부</description>
    <label>Is Available</label>
    <type>Checkbox</type>
</CustomField>