force-app/main/default/objects/Technician__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>현장 연락처</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>