force-app/main/default/objects/Technician__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Service_Region__c</columns>
    <columns>Is_Available__c</columns>
    <columns>Active_Work_Orders__c</columns>
    <columns>Phone__c</columns>
    <label>All</label>
</ListView>